--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,7 +100,7 @@
               {% if page.url != '/about.html' and page.url != '/jobs.html' %}
               selected
               {% endif %} menu-blog" href="/index.html">블로그</a></li>
-            <li><a class="menu-github" href="https://github.com/spoqa">GitHub</a></li>
+            <li><a class="menu-github" href="https://github.com/i2sec">GitHub</a></li>
             {% if site.trawler_mode %}
             <li><a class="
               {% if page.url == '/jobs.html' %}
