--- a/css/styles.scss
+++ b/css/styles.scss
@@ -453,6 +453,13 @@ figcaption {
   width: 24px;
   height: 24px;
 }
+.instagram-icon {
+  display: inline-block;
+  background-image: url(/images/instagram-icon.png);
+  background-size: 24px 24px;
+  width: 24px;
+  height: 24px;
+}
 .tumblr-icon {
   display: inline-block;
   background-image: url(/images/tumblr-icon.png);
